objects/scormanywhere__Course_Catalog__c.object
<CustomObject>
    <fields>
        <fullName>scormanywhere__Catalog__c</fullName>
        <label>Catalog</label>
        <referenceTo>scormanywhere__Catalog__c</referenceTo>
        <relationshipLabel>Media Catalogs</relationshipLabel>
        <relationshipName>Course_Catalogs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Media</label>
        <referenceTo>scormanywhere__Course__c</referenceTo>
        <relationshipLabel>Media Catalogs</relationshipLabel>
        <relationshipName>Course_Catalogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Order__c</fullName>
        <label>Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Media Catalog Item</label>
    <nameField>
        <displayFormat>CCN-{0}</displayFormat>
        <label>Media Catalog Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Catalogs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>scormanywhere__Order_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>scormanywhere__Order__c &lt; 0</errorConditionFormula>
        <errorMessage>Order should be 0 or above</errorMessage>
    </validationRules>
</CustomObject>